using the cover method to avoid getting images with extra whitespace

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,6 +46,21 @@
   font-size: 10px;
 }
 
+.record > .image-container {
+  position: relative;
+  height: 126px;
+  margin: 0 auto;
+  resize: both;
+}
+
+.record > .image-container > a > img {
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  resize: both;
+}
+
 #collapseFinna > .panel-body > .row > .btn:hover, #collapseFinna > .panel-body > .row > .btn:active, #collapseFinna > .panel-body > .row > .btn:focus {
   background-color: #fff;
 }
